@@ -1,3 +1,7 @@
+19 September 2007
++ On a branch install, Boost was checking the hub's directory
+  permissions instead of the branch's.
+
 Version 2.1.3
 -----------------------------------------------------
 5 September 2007
